--- a/src/app.css
+++ b/src/app.css
@@ -93,14 +93,23 @@ button:focus:not(:focus-visible) {
 	outline: none;
 }
 
-button.primary {
+.btn-primary {
 	background-color: var(--color-theme-1);
 	color: var(--color-text-alt);
 	font-weight: bold;
 	padding: 10px 20px;
 	border-radius: 5px;
 	margin: 10px 0;
+	text-decoration: none;
+	text-align: center;
 }
+
+.btn-primary:hover {
+	background-color: var(--color-theme-2);
+	transition: all 0.2s;
+	text-decoration: none;
+}
+
 
 @media (min-width: 720px) {
 	h1 {
